Fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,6 @@ body {
     color: #cc00ff;
 }
 
-.section-content,
-{
-    text-indent: 1rem !important;
-}
-
 main {
     flex: 1 0 auto;
     font-family: 'Ubuntu', sans-serif;
@@ -83,7 +78,7 @@ main {
 }
 
 .item {
-    padding-bottom: 10px;
+    padding-top: 15px;
 }
 
 .section-title {
